--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,13 +24,13 @@ import fondoContacto from '../assets/images/fondo-contacto.jpg';
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page Económica desde $100.000 | Diseño Rápido y Profesional Chile</title>
   <meta name="description" content="Landing page económica y rápida desde $100.000 en Chile. Diseño profesional, optimizada para Google, ideal para captar clientes y generar conversiones. ¡Entrega en 48 horas!">
-  <meta name="keywords" content="landing page económica, landing page $100.000, diseño web barato, landing page rápida, Chile, Temuco">
+  <meta name="keywords" content="landing page económica, landing page $100.000, diseño web barato, landing page rápida, Chile, Temuco, Santiago">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Landing Page Económica desde $100.000 | Diseño Rápido Chile">
   <meta property="og:description" content="Landing page económica y rápida desde $100.000. Diseño profesional optimizado para Google. ¡Entrega en 48 horas!">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://xn--diseopaginas-dhb.cl/landing">
-  <link rel="canonical" href="https://xn--diseopaginas-dhb.cl/landing">
+  <meta property="og:url" content="https://diseñopaginas.cl/">
+  <link rel="canonical" href="https://diseñopaginas.cl/" />
   <meta name="p:domain_verify" content="202a15564602cb7871e576394e4296b8"/>
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
@@ -207,7 +207,7 @@ import fondoContacto from '../assets/images/fondo-contacto.jpg';
       <div class="luminix-menu-mobile-top">
         <div class="mobile-logo">
           <a href="index.html">
-            <img src="/images/logo/diseno-web-logo.svg" width="112" alt="logo">
+            <img src="/images/logo/diseno-web-logo.svg" width="122" alt="logo">
           </a>
         </div>
         <button class="luminix-menu-toggle mobile">
@@ -242,7 +242,7 @@ import fondoContacto from '../assets/images/fondo-contacto.jpg';
                   </a>
                 </li>
                 <li>
-                  <img src="/images/iconbox/location.svg" alt="">Temuco, Chile
+                  <img src="/images/iconbox/location.svg" alt="">Temuco / Santiago, Chile
                 </li>
               </ul>
             </div>
@@ -269,7 +269,7 @@ import fondoContacto from '../assets/images/fondo-contacto.jpg';
           <div class="col-8 col-sm-auto ">
             <div class="header-logo1 ">
               <a href="index.html">
-                <img src="/images/logo/diseno-web-logo.svg" width="178" alt="logo Diseño web chile">
+                <img src="/images/logo/diseno-web-logo.svg" width="188" alt="logo Diseño web chile">
               </a>
             </div>
           </div>
