--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ import Social from './Social.astro';
                 </a>
               </li>
               <li>
-                <img src="/images/iconbox/location.svg" alt="">Temuco, Chile
+                <img src="/images/iconbox/location.svg" alt="">Temuco / Santiago, Chile
               </li>
             </ul>
           </div>
@@ -39,7 +39,7 @@ import Social from './Social.astro';
         <div class="col-8 col-sm-auto">
           <div class="header-logo1">
             <a href="/">
-              <img src="/images/logo/diseno-web-logo.svg" width="178" alt="logo Diseño web chile">
+              <img src="/images/logo/diseno-web-logo.svg" width="188" alt="logo Diseño web chile">
             </a>
           </div>
         </div>
@@ -78,7 +78,7 @@ import Social from './Social.astro';
     <div class="luminix-menu-mobile-top">
       <div class="mobile-logo">
         <a href="/">
-          <img src="/images/logo/diseno-web-logo.svg" width="112" alt="logo">
+          <img src="/images/logo/diseno-web-logo.svg" width="122" alt="logo">
         </a>
       </div>
       <button class="luminix-menu-toggle mobile">
